--- a/app/src/main/res/layout/fragment_add_task_screen.xml
+++ b/app/src/main/res/layout/fragment_add_task_screen.xml
@@ -31,7 +31,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:tint="@color/black"
+                app:tint="@color/colorPrimary"
                 tools:ignore="ContentDescription" />
 
             <EditText
@@ -39,19 +39,18 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_marginStart="10dp"
+                android:fontFamily="@font/merriweather_regular"
                 android:gravity="center_vertical"
                 android:hint="Write title..."
-                android:maxLines="1"
                 android:inputType="textCapSentences"
+                android:maxLines="1"
                 android:textSize="20sp"
-                android:fontFamily="@font/merriweather_regular"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/more_menu"
                 app:layout_constraintStart_toEndOf="@+id/addTask_btn_back"
                 app:layout_constraintTop_toTopOf="parent"
-                app:textColor="@color/black"
-                />
+                app:textColor="@color/black" />
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/more_menu"
@@ -65,7 +64,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:tint="@color/black"
+                app:tint="@color/colorPrimary"
                 tools:ignore="ContentDescription" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -89,12 +88,12 @@
         android:id="@+id/saveTaskBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:backgroundTint="@color/white"
-        app:tint="#3868FB"
-        app:layout_constraintEnd_toEndOf="parent"
         android:layout_margin="20dp"
+        android:backgroundTint="@color/white"
+        android:src="@drawable/ic_save"
         app:layout_constraintBottom_toTopOf="@id/add_container"
-        android:src="@drawable/ic_save"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:tint="@color/colorPrimary" />
 
 
     <androidx.appcompat.widget.LinearLayoutCompat
@@ -103,37 +102,37 @@
         android:layout_height="wrap_content"
         android:background="@color/white"
         android:padding="4dp"
-        app:layout_constraintTop_toBottomOf="@id/task_recyclerview"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        >
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/task_recyclerview">
 
         <androidx.appcompat.widget.LinearLayoutCompat
             android:id="@+id/add"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:clickable="true"
             android:focusable="true"
-            android:layout_width="wrap_content"
-            android:foreground="?android:selectableItemBackground"
-            android:layout_height="wrap_content">
+            android:foreground="?android:selectableItemBackground">
 
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:src="@drawable/ic_plus"
+                android:background="@null"
                 android:paddingStart="15dp"
                 android:paddingEnd="15dp"
-                android:background="@null"/>
+                android:src="@drawable/ic_plus" />
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/taskText"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
+                android:fontFamily="@font/merriweather_regular"
                 android:gravity="center_vertical"
                 android:padding="6dp"
-                android:fontFamily="@font/merriweather_regular"
-                android:textSize="18sp"
-                android:text="add more" />
+                android:textColor="@color/colorPrimary"
+                android:text="add more"
+                android:textSize="18sp" />
 
 
         </androidx.appcompat.widget.LinearLayoutCompat>
