--- a/app/src/main/res/layout/fragment_page_note.xml
+++ b/app/src/main/res/layout/fragment_page_note.xml
@@ -1,20 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="10dp"
     android:background="@color/colorBackground"
+    android:padding="10dp"
     tools:context=".presentation.ui.pager.NotePage">
 
     <androidx.appcompat.widget.SearchView
         android:id="@+id/searchView"
-        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="?android:actionBarSize"
         android:focusable="true"
+        android:visibility="gone"
         app:iconifiedByDefault="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -24,55 +23,54 @@
         app:searchIcon="@drawable/ic_search"
         app:showDividers="middle" />
 
-    <TextView
+    <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/filter"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Filter:"
         android:fontFamily="@font/merriweather_regular"
-        android:textSize="22dp"
-        android:textColor="@color/black"
-        app:layout_constraintTop_toBottomOf="@id/searchView"
+        android:src="@drawable/ic_filter"
         app:layout_constraintEnd_toEndOf="parent"
-        />
+        app:layout_constraintTop_toBottomOf="@id/searchView" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/tag_recycle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:listitem="@layout/tag_layout"
-        android:orientation="horizontal"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_constraintTop_toBottomOf="@id/filter"
-        />
+    <!--    <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/tag_recycle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:listitem="@layout/tag_layout"
+            android:orientation="horizontal"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintTop_toBottomOf="@id/filter" />-->
 
     <View
+        android:id="@+id/stick"
         android:layout_width="match_parent"
         android:layout_height="3dp"
-        app:layout_constraintTop_toBottomOf="@id/tag_recycle"
-        android:background="@color/grey"/>
+        android:background="@color/grey"
+        app:layout_constraintTop_toBottomOf="@id/filter" />
 
     <TextView
         android:id="@+id/notes"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Notes:"
-        android:fontFamily="@font/merriweather_regular"
-        android:textSize="22dp"
-        android:textColor="@color/black"
         android:layout_marginTop="6dp"
+        android:fontFamily="@font/merriweather_regular"
+        android:text=" My notes"
+        android:textColor="@color/black"
+        android:textSize="22sp"
+        app:layout_constraintBottom_toTopOf="@+id/stick"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tag_recycle"
-        />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/note_recyclerview"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        tools:listitem="@layout/note_item"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/notes" />
+        app:layout_constraintTop_toBottomOf="@+id/notes"
+        tools:listitem="@layout/note_item" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
