--- a/app/src/main/res/layout/tag_layout.xml
+++ b/app/src/main/res/layout/tag_layout.xml
@@ -1,23 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.LinearLayoutCompat
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/chip_text"
-        android:clickable="true"
-        android:focusable="true"
-        android:paddingStart="8dp"
-        android:paddingEnd="8dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_margin="5dp"
         android:background="@drawable/tag_background"
-        android:foreground="?selectableItemBackground"
-        android:layout_width="wrap_content"
-        android:text="android"
+        android:clickable="true"
+        android:focusable="true"
         android:fontFamily="@font/merriweather_regular"
-        android:textSize="16sp"
-        android:layout_height="wrap_content">
+        android:foreground="?selectableItemBackground"
+        android:paddingStart="8dp"
+        android:paddingEnd="8dp"
+        android:text="android"
+        android:textColor="@color/colorPrimary"
+        android:textSize="18sp">
 
     </TextView>
 </androidx.appcompat.widget.LinearLayoutCompat>
