--- a/app/src/main/res/layout/tags_input_layout.xml
+++ b/app/src/main/res/layout/tags_input_layout.xml
@@ -36,9 +36,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-    >
-
+        app:layout_constraintTop_toTopOf="parent">
 
     </com.google.android.material.chip.ChipGroup>
 
