--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,5 +11,7 @@
     <color name="grey">#9C9C9C</color>
     <color name="colorBackground">#EDF3FF</color>
     <color name="tag_backgr">#E8E8E8</color>
+    <color name="colorPrimary">#E91E63</color>
+
 
 </resources>
