added bottomSheetDialog, edited tagFilter, edited Themes to lightMode, it is release

--- a/app/src/main/res/layout/fragment_add_note_screen.xml
+++ b/app/src/main/res/layout/fragment_add_note_screen.xml
@@ -151,7 +151,7 @@
         android:src="@drawable/ic_save"
         app:layout_constraintBottom_toTopOf="@id/formatting_toolbar"
         app:layout_constraintEnd_toEndOf="parent"
-        app:tint="#3868FB" />
+        app:tint="@color/colorPrimary" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
