--- a/app/src/main/res/layout/fragment_page_task.xml
+++ b/app/src/main/res/layout/fragment_page_task.xml
@@ -54,5 +54,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tasks"
-        tools:listitem="@layout/note_item" />
+        tools:listitem="@layout/task_item" />
 </androidx.constraintlayout.widget.ConstraintLayout>
