--- a/app/src/main/res/menu/popup_menu.xml
+++ b/app/src/main/res/menu/popup_menu.xml
@@ -3,10 +3,10 @@
 
     <item android:id="@+id/edit"
         android:title="Edit"
-        android:icon="@drawable/ic_menu_plus" />
+        android:icon="@drawable/ic_edit_24" />
 
     <item android:id="@+id/delete"
         android:title="Delete"
-        android:icon="@drawable/ic_menu_close"/>
+        android:icon="@drawable/ic_delete"/>
 
 </menu>
